fix(users): Better MIME-type checking, remove image cropping library (#1589)
* Cropping remove, nicer UI

* Fix MIME-type checking, add image upload tests

* Change image config settings to uploads.profile.image to build a more
rational structure for configuring other types of uploads

--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -17,11 +17,6 @@
   max-height: 150px;
   min-height: 150px;
 }
-.cropArea {
-  background: #E4E4E4;
-  height: 300px;
-  width: 300px;
-}
 .social-button {
   -webkit-transition-duration: 0.4s;
   -moz-transition-duration: 0.4s;
